# Games-cpp

./: .gitignore  CMakeLists.txt  README.md
checkers/: CMakeLists.txt
checkers-purec/: CMakeLists.txt
checkers-purec/src/: Gameclock.c  Gameclock.h  Main.c
checkers-purec/stats/: plot.py
checkers/assets/: checker_green.aseprite  checker_green2.xcf  checker_green3.xcf  checker_red.aseprite  checker_red2.xcf  checker_red3.xcf  checker_shadow.xcf
checkers/include/: SDL.hpp  game_tool.hpp
checkers/include/GameTool/: Animator.hpp  GameClock.hpp  GameState.hpp  GameStateProcessor.hpp  Tweening.hpp
checkers/include/SDL2cpp/: AssetLoading.hpp  Color.hpp  MemoryContainer.hpp  Renderer.hpp  Surface.hpp
checkers/include/SDLExtra/: Font.hpp
checkers/libs/SDL2_packed/: CMakeLists.txt
checkers/src/: BoardPlayState.hpp  Creators.hpp  Deleter.hpp  ErrorCheck.cpp  ErrorCheck.hpp  Main.cpp  PauseState.hpp  Shortcuts.cpp  Shortcuts.hpp  SmartPointers.hpp  WinState.hpp
checkers/src/GameTool/: Animator.hpp  Easers.cpp  Easers.hpp  GameClock.cpp  GameClock.hpp  GameState.cpp  GameState.hpp  GameStateProcessor.cpp  GameStateProcessor.hpp  MessageQueueInterface.hpp  SingleThreadedMessageQueue.cpp  SingleThreadedMessageQueue.hpp  SpriteSheetAnimator.hpp  Tweening.cpp  Tweening.hpp  Tweening2DPoint.cpp  Tweening2DPoint.hpp  Vector2d.hpp
checkers/src/SDL2cpp/: AssetLoading.cpp  AssetLoading.hpp  AssetsLoading.cpp  AssetsLoading.hpp  Color.cpp  Color.hpp  ErrorCheck.cpp  ErrorCheck.hpp  Font.cpp  Font.hpp  Globals.cpp  Globals.hpp  MemoryContainer.hpp  Renderer.cpp  Renderer.hpp  Sized2DEntity.hpp  SizedEntity.hpp  Surface.cpp  Surface.hpp  Texture.cpp  Texture.hpp  Window.cpp  Window.hpp
checkers/src/SDL2cpp/container_bases/: ContainerBase.hpp  FreeingFunctionType.hpp  SharedContainerBase.hpp
checkers/src/SDL2cpp/libraries/: ImageLibrary.cpp  ImageLibrary.hpp  Libraries.hpp  SDLLibrary.cpp  SDLLibrary.hpp  TTFLibrary.cpp  TTFLibrary.hpp
checkers/src/SDLExtra/: Font.cpp  Font.hpp
checkers/src/states/: AllStates.cpp  BoardPlayState.cpp  BoardPlayState.hpp  PauseState.cpp  PauseState.hpp  WinState.cpp  WinState.hpp
todo/: CMakeLists.txt  Makefile  build.ninja  rules.ninja
todo/include/: Actor.hpp  Animator.hpp  GameClock.hpp  GameState.hpp  Kdtree.hpp  SDL.hpp  Tweening.hpp
todo/include/GameTool/: Animator.hpp  GameClock.hpp  GameState.hpp  Tweening.hpp
todo/include/SDL2cpp/: AssetLoading.hpp  ErrorCheck.hpp  Globals.hpp  MemoryContainer.hpp  Renderer.hpp  Surface.hpp  Texture.hpp  Window.hpp
todo/include/SDLExtra/: Font.hpp
todo/src/: GameState.cpp  Main.cpp
todo/src/GameTool/: GameState.cpp
todo/src/SDL2cpp/: AssetLoading.cpp  Globals.cpp  Renderer.cpp  Surface.cpp  Texture.cpp  Window.cpp
todo/src/SDLExtra/: Font.cpp
todo/stats/: plot.py
