cmake_minimum_required(VERSION 3.12)

project(SDL2_packed)

set(PREFIX ${CMAKE_CURRENT_SOURCE_DIR})

set(SDL2_PLATFORM_TARGET x86_64-w64-mingw32)

set(SDL2_MAIN_INCLUDE_DIR
    ${PREFIX}/SDL2-2.0.9/${SDL2_PLATFORM_TARGET}/include/SDL2
)

set(SDL2_MAIN_LINK_DIR
    ${PREFIX}/SDL2-2.0.9/${SDL2_PLATFORM_TARGET}/lib
)

set(SDL2_MAIN_LINK_LIB
    SDL2
)

set(GFX_SOURCE_PREFIX ${CMAKE_CURRENT_SOURCE_DIR}/SDL2_gfx-1.0.4)

set(GFX_SOURCES
    ${GFX_SOURCE_PREFIX}/SDL2_framerate.c
    ${GFX_SOURCE_PREFIX}/SDL2_gfxPrimitives.c
    ${GFX_SOURCE_PREFIX}/SDL2_imageFilter.c
    ${GFX_SOURCE_PREFIX}/SDL2_rotozoom.c
)

set(GFX_INCLUDE_DIRS
    ${GFX_SOURCE_PREFIX}
    ${SDL2_MAIN_INCLUDE_DIR}
)

add_library(SDL2_gfx SHARED "")
target_sources(SDL2_gfx PRIVATE ${GFX_SOURCES})
target_include_directories(SDL2_gfx PUBLIC ${GFX_INCLUDE_DIRS})
target_link_directories(SDL2_gfx PRIVATE ${SDL2_MAIN_LINK_DIR})
target_link_libraries(SDL2_gfx PRIVATE ${SDL2_MAIN_LINK_LIB})


set(SDL2_PACKED_INCLUDE_DIRS
    ${SDL2_MAIN_INCLUDE_DIR}
    ${PREFIX}/SDL2_image-2.0.4/${SDL2_PLATFORM_TARGET}/include/SDL2
    ${PREFIX}/SDL2_ttf-2.0.15/${SDL2_PLATFORM_TARGET}/include/SDL2
    PARENT_SCOPE
)

set(SDL2_PACKED_LINK_DIRS
    ${SDL2_MAIN_LINK_DIR}
    ${PREFIX}/SDL2_image-2.0.4/${SDL2_PLATFORM_TARGET}/lib
    ${PREFIX}/SDL2_ttf-2.0.15/${SDL2_PLATFORM_TARGET}/lib
    PARENT_SCOPE
)

set(SDL2_PACKED_LINK_LIBS
    ${SDL2_MAIN_LINK_LIB}
    SDL2_image
    SDL2_ttf
    SDL2_gfx
    PARENT_SCOPE
)

set(SDL2_PACKED_DLL_DIRS
    ${PREFIX}/SDL2-2.0.9/${SDL2_PLATFORM_TARGET}/bin
    ${PREFIX}/SDL2_image-2.0.4/${SDL2_PLATFORM_TARGET}/bin
    ${PREFIX}/SDL2_ttf-2.0.15/${SDL2_PLATFORM_TARGET}/bin
    PARENT_SCOPE
)
